K3S & K8S/Kafka/ui/3.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-monitor-ingress
  namespace: kafka-set
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kafka-monitor.vncare.vn
  rules:
  - host: kafka-monitor.vncare.vn
    http:
      paths:
      - backend:
          service:
            name: kafka-ui-svc
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
